// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswersTable matches tutor teacher-preview snapshot 1`] = `
<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
    >
      <div
        className="correct-incorrect"
      />
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
        onKeyPress={[Function]}
      >
        <span
          aria-label="Choice A:"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
               
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
    >
      <div
        className="correct-incorrect"
      />
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
        onKeyPress={[Function]}
      >
        <span
          aria-label="Choice B:"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
               
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ol>
  <li>matter is moving at speeds greater than roughly 1% the speed of light,</li>
  <li>objects are large enough to be seen with the naked eye, and</li>
  <li>there is the involvement of a strong gravitational field</li>
</ol>
",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
</div>
`;

exports[`AnswersTable renders all feedback 1`] = `
<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled answer-selected answer-incorrect"
    >
      <input
        aria-details="feedback-1-0"
        checked={true}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          aria-label="Selected Choice A:"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi faCGeG"
          >
            <span>
              Incorrect Answer
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <aside
    className="question-feedback bottom"
    id="feedback-1-0"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Answer level feedback",
          }
        }
      />
    </aside>
  </aside>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled answer-correct"
    >
      <input
        aria-details="feedback-1-1"
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          aria-label="Choice B:"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
              Correct Answer
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <aside
    className="question-feedback bottom"
    id="feedback-1-1"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Answer level feedback",
          }
        }
      />
    </aside>
  </aside>
</div>
`;

exports[`AnswersTable renders correct answer feedback 1`] = `
<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled answer-selected answer-correct"
    >
      <input
        aria-details="feedback-1-0"
        checked={true}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          aria-label="Selected Choice A:"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
              Correct Answer
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <aside
    className="question-feedback bottom"
    id="feedback-1-0"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Feedback",
          }
        }
      />
    </aside>
  </aside>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          aria-label="Choice B:"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
               
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
</div>
`;

exports[`AnswersTable renders incorrect answer feedback 1`] = `
<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled answer-selected answer-incorrect"
    >
      <input
        aria-details="feedback-1-0"
        checked={true}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          aria-label="Selected Choice A:"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi faCGeG"
          >
            <span>
              Incorrect Answer
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <aside
    className="question-feedback bottom"
    id="feedback-1-0"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Feedback",
          }
        }
      />
    </aside>
  </aside>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled answer-correct"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          aria-label="Choice B:"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
              Correct Answer
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
</div>
`;

exports[`AnswersTable renders instructions 1`] = `
<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <b>
    Instructions
  </b>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          aria-label="Choice A:"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
               
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          aria-label="Choice B:"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
               
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
</div>
`;

exports[`AnswersTable sorts by given ID order 1`] = `
<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          aria-label="Choice A:"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
               
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          aria-label="Choice B:"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          className="answer-answer"
          role="status"
        >
          <div
            className="sc-jSMfEi ecLwSd"
          >
            <span>
               
            </span>
          </div>
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
</div>
`;
